--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <h1 class="mb-0">Maki
                 <span class="text-primary">Tolentino</span>
             </h1>
-            <div class="subheading mb-5">Mandaluyong City, Philippines 1203 · (63) 945-455-9555 ·
+            <div class="subheading mb-5">
                 <a href="mailto:name@email.com">mark.collado.tolentino@gmail.com</a>
             </div>
             <p class="lead">
